@@ -133,7 +133,7 @@ public class CreateColumnFamilyStatement extends SchemaAlteringStatement
         private final Map<ColumnIdentifier, ParsedType> definitions = new HashMap<ColumnIdentifier, ParsedType>();
         private final CFPropDefs properties = new CFPropDefs();
 
-        private final List<ColumnIdentifier> keyAliases = new ArrayList<ColumnIdentifier>();
+        private final List<List<ColumnIdentifier>> keyAliases = new ArrayList<List<ColumnIdentifier>>();
         private final List<ColumnIdentifier> columnAliases = new ArrayList<ColumnIdentifier>();
         private final Map<ColumnIdentifier, Boolean> definedOrdering = new HashMap<ColumnIdentifier, Boolean>();
 
@@ -181,12 +181,13 @@ public class CreateColumnFamilyStatement extends SchemaAlteringStatement
                     stmt.columns.put(id, pt.getType()); // we'll remove what is not a column below
                 }
 
-                // Ensure that at least one key has been specified.
-                if (keyAliases.size() == 0)
-                    throw new InvalidRequestException("You must specify a PRIMARY KEY");
+                if (keyAliases.size() != 1)
+                    throw new InvalidRequestException("You must specify one and only one PRIMARY KEY");
 
-                List<AbstractType<?>> keyTypes = new ArrayList<AbstractType<?>>(keyAliases.size());
-                for (ColumnIdentifier alias : keyAliases)
+                List<ColumnIdentifier> kAliases = keyAliases.get(0);
+
+                List<AbstractType<?>> keyTypes = new ArrayList<AbstractType<?>>(kAliases.size());
+                for (ColumnIdentifier alias : kAliases)
                 {
                     stmt.keyAliases.add(alias.key);
                     AbstractType<?> t = getTypeAndRemove(stmt.columns, alias);
@@ -323,9 +324,9 @@ public class CreateColumnFamilyStatement extends SchemaAlteringStatement
             definitions.put(def, type);
         }
 
-        public void addKeyAlias(ColumnIdentifier alias)
+        public void addKeyAliases(List<ColumnIdentifier> aliases)
         {
-            keyAliases.add(alias);
+            keyAliases.add(aliases);
         }
 
         public void addColumnAlias(ColumnIdentifier alias)
